# GPU-NURBS

./: README.md  dev_compile.sh
model/: center_bk.nu  part3_0.nu  part3_1.nu  part3_2.nu  part3_3.nu  test.nu  test_face1.nu  test_face2.nu
src/: CMakeLists.txt  main.cu
src/NURBS/: Evaluate.cu  Evaluate.cuh
src/kernel/: kernel.cu  kernel.cuh
src/test/: test.cu  test.cuh
src/util/: ExtraMath.cu  ExtraMath.cuh  Matrix.cu  Matrix.cuh  Operator.cu  Operator.cuh
